[project]
name = "nanochat"
version = "0.1.0"
description = "the minimal full-stack ChatGPT clone"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "filelock>=3.19.0",
    "kernels>=0.11.7",
    "numpy>=1.26.0",
    "psutil>=7.1.0",
    "pyarrow>=21.0.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch>=2.9.1",
    "wandb>=0.21.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pytest>=8.0.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
jetson = [
    "flash-attn==2.8.3",
    "triton>=3.5.1",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "platform_machine != 'aarch64'" },
    { index = "jetson", marker = "platform_machine == 'aarch64'" },
]

flash-attn = [
    { index = "jetson" }
]

triton = [
    { index = "jetson" }
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "jetson"
url = "https://pypi.jetson-ai-lab.io/jp6/cu126"
explicit = true

[tool.uv]
default-groups = []

